Oh my god Im gonna kill some one

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
     <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
     <!--[if gt IE 8]><!-->
-    <html class="no-js">
+    <html class="">
     <!--<![endif]-->
 
     <head>
@@ -53,7 +53,7 @@
         <!--[if lt IE 9]>
     	<script src="js/respond.min.js"></script>
     	<![endif]-->
-        <script>document.documentElement.className = 'js';</script>
+        <!-- <script>document.documentElement.className = 'js';</script> -->
         <title>Jud Nichols</title>
     </head>
 
@@ -69,7 +69,14 @@
 
     <!-- <script src="assets/js/jquery.waypoints.min.js"></script> -->
     <script src="public/plugins/polyfills.js"></script>
+
+    <!-- Portfolio JS -->
+    <script src="public/plugins/lity.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.0/masonry.pkgd.js"></script>
     <script src="public/plugins/imagesloaded.pkgd.min.js"></script>
+    <script src="public/plugins/flexslider-min.js"></script>
+
+    <!-- Home Page JS -->
     <script src="public/plugins/anime.min.js"></script>
     <script src="public/plugins/mirrorFx.js"></script>
     <script src="public/plugins/slideshow.js"></script>
