--- a/index.html
+++ b/index.html
@@ -82,48 +82,55 @@
     <script src="public/plugins/slideshow.js"></script>
     <script>
             $(document).ready(function(){
+                var Home = document.getElementById('Home');
                 function init() {
                     new Slideshow(document.querySelector('.slideshow'));
                 }
-                init();
 
-                		var button = document.getElementById('cn-button'),
-                	    wrapper = document.getElementById('cn-wrapper'),
-                	    overlay = document.getElementById('cn-overlay');
+                if(Home){
+                    init();
+                }
 
-                		//open and close menu when the button is clicked
-                		var open = false;
-                		button.addEventListener('click', handler, false);
-                		wrapper.addEventListener('click', cnhandle, false);
 
-                		function cnhandle(e){
-                			e.stopPropagation();
-                		}
+        		var button = document.getElementById('cn-button'),
+        	    wrapper = document.getElementById('cn-wrapper'),
+        	    overlay = document.getElementById('cn-overlay');
 
-                		function handler(e){
-                			if (!e) var e = window.event;
-                		 	e.stopPropagation();//so that it doesn't trigger click event on document
+        		//open and close menu when the button is clicked
+        		var open = false;
+        		button.addEventListener('click', handler, false);
+        		wrapper.addEventListener('click', cnhandle, false);
 
-                		  	if(!open){
-                		    	openNav();
-                		  	}
-                		 	else{
-                		    	closeNav();
-                		  	}
-                		}
-                		function openNav(){
-                			open = true;
-                		    button.innerHTML = "-";
-                		    classie.add(overlay, 'on-overlay');
-                		    classie.add(wrapper, 'opened-nav');
-                		}
-                		function closeNav(){
-                			open = false;
-                			button.innerHTML = "+";
-                			classie.remove(overlay, 'on-overlay');
-                			classie.remove(wrapper, 'opened-nav');
-                		}
-                		document.addEventListener('click', closeNav);
+        		function cnhandle(e){
+        			e.stopPropagation();
+        		}
+
+        		function handler(e){
+        			if (!e) var e = window.event;
+        		 	e.stopPropagation();//so that it doesn't trigger click event on document
+
+        		  	if(!open){
+        		    	openNav();
+        		  	}
+        		 	else{
+        		    	closeNav();
+        		  	}
+        		}
+        		function openNav(){
+        			open = true;
+        		    button.innerHTML = "-";
+        		    classie.add(overlay, 'on-overlay');
+        		    classie.add(wrapper, 'opened-nav');
+                    console.log("Im open");
+        		}
+        		function closeNav(){
+        			open = false;
+        			button.innerHTML = "+";
+        			classie.remove(overlay, 'on-overlay');
+        			classie.remove(wrapper, 'opened-nav');
+                    console.log("Im closed");
+        		}
+        		document.addEventListener('click', closeNav);
             });
 
 
