--- a/index.html
+++ b/index.html
@@ -91,12 +91,10 @@
                     init();
                 }
 
-
         		var button = document.getElementById('cn-button'),
         	    wrapper = document.getElementById('cn-wrapper'),
         	    overlay = document.getElementById('cn-overlay');
 
-        		//open and close menu when the button is clicked
         		var open = false;
         		button.addEventListener('click', handler, false);
         		wrapper.addEventListener('click', cnhandle, false);
@@ -133,17 +131,18 @@
         		document.addEventListener('click', closeNav);
             });
 
-
-
-
-
     </script>
 
 
 
     <!-- Main JS (Do not remove) -->
-
     <script src="public/plugins/main.js"></script>
+
+    <!-- FeaturedVideo JS -->
+    <script src="public/plugins/featured/anime.min.js"></script>
+    <script src="public/plugins/featured/enquire.min.js"></script>
+    <script src="public/plugins/featured/tabsnav.js"></script>
+    <script src="public/plugins/featured/featuredVideo.js"></script>
 
 
     </body>
