new portfolio page styles, js behavior and component set up successful

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
     <script src="public/plugins/featured/tabsnav.js"></script>
     <script src="public/plugins/featured/featuredVideo.js"></script>
 
+    <!-- Portfolio JS -->
+    <script src="public/plugins/flickity.pkgd.min.js"></script>
+    <script src="public/plugins/smoothscroll.js"></script>
+    <script src="public/plugins/portfolio-alternate.js"></script>
 
     </body>
 
